# UnnamedSpaceStrategy

./: .gitignore  CMakeLists.txt  README.md
cmake/: clang-cxx-dev-tools.cmake  message_macros.cmake
src/: CMakeLists.txt  constants.h  main.cpp
src/game_engine/: GameEngine.cpp  GameEngine.h  resources.h.in
src/game_engine/orbital_mechanics/: OrbitalMechanicsEngine.cpp
src/game_engine/physics/: PhysicsEngine.cpp  PhysicsEngine.h  Vector3d.cpp  Vector3d.h
src/game_engine/ui/: GUIEngine.cpp  GUIEngine.h  GUIManager.cpp  GraphicsEngine.cpp  GraphicsEngine.h  InputManager.cpp  InputManager.h
src/orbital_mechanics/: OrbitalMechanicsEngine.h
src/ui/: GUIManager.h  GraphicsEngine.cpp  InputManager.cpp  InputManager.h
src/utils/: OrbitParameters.h  Properties.cpp  Properties.h  Utils.h  Vector3d.cpp  Vector3d.h
